# feedpulse

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260604_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: sse.py
backend/app/api/handlers/: jobs.py
backend/app/api/routes/: health.py  jobs.py
backend/app/core/: logging.py  settings.py
backend/app/data/: __init__.py  mock_store.py  seed_urls.py  source_manifest.py  xml_sources.py
backend/app/db/: base.py  enums.py  models.py  notifications.py  session.py
backend/app/dto/: jobs.py
backend/app/middleware/: __init__.py  cors.py  request_logging.py
backend/app/repositories/: jobs.py
backend/app/schemas/: jobs.py
backend/app/services/: job_reconciler.py  job_runtime.py  job_simulator.py  jobs.py  xml_ingest.py
backend/app/services/jobs/: __init__.py  (+11 more)
backend/app/temporal/: __init__.py  activities.py  client.py  types.py  worker.py  workflows.py
backend/scripts/: migrate.sh  start_api.sh  start_worker.sh  verify_live_failures.py  verify_live_idempotency.py  verify_live_reconciliation.py  verify_live_retries.py  verify_live_runtime.py  verify_live_sse.py  wait_for_tcp.py
backend/tests/: test_job_events.py  test_job_reconciler.py  test_job_start_runtime.py  test_logging.py  test_repository_task_detail.py  test_task_list_filters.py  test_task_sorting.py  test_temporal_activities.py  test_temporal_workflows.py  test_xml_ingest.py
(+31 files in other folders)
